--- a/data/5/scp_guide/scp_operators.htm
+++ b/data/5/scp_guide/scp_operators.htm
@@ -18,6 +18,12 @@ a:link, span.MsoHyperlink
 a:visited, span.MsoHyperlinkFollowed
 	{color:purple;
 	text-decoration:underline;}
+p.msochpdefault, li.msochpdefault, div.msochpdefault
+	{mso-style-name:msochpdefault;
+	margin-right:0cm;
+	margin-left:0cm;
+	font-size:10.0pt;
+	font-family:"Times New Roman","serif";}
 .MsoChpDefault
 	{font-size:10.0pt;}
 @page WordSection1
@@ -25,11 +31,6 @@ a:visited, span.MsoHyperlinkFollowed
 	margin:2.0cm 42.5pt 2.0cm 3.0cm;}
 div.WordSection1
 	{page:WordSection1;}
- /* List Definitions */
- ol
-	{margin-bottom:0cm;}
-ul
-	{margin-bottom:0cm;}
 -->
 </style>
 
@@ -46,56 +47,6 @@ style='font-size:16.0pt'>Операторы языка SCP</span></b></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:14.0pt'>&nbsp;</span></p>
 
-<table class=MsoNormalTable border=1 cellspacing=0 cellpadding=0 width="100%"
- style='width:100.0%;border-collapse:collapse;border:none'>
- <tr>
-  <td width="100%" valign=top style='width:100.0%;border:solid windowtext 1.0pt;
-  padding:0cm 5.4pt 0cm 5.4pt'>
-  <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:14.0pt;color:black'>Классы операторов языка </span><span
-  lang=EN-US style='font-size:14.0pt;color:black'>SCP</span></p>
-  </td>
- </tr>
- <tr>
-  <td width="100%" style='width:100.0%;border:solid windowtext 1.0pt;
-  border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
-  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
-  style='font-size:20.0pt'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
-  style='font-size:20.0pt'><a href="gen_class.htm">Класс операторов генерации
-  gen</a></span></p>
-  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
-  style='font-size:20.0pt'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
-  style='font-size:20.0pt;color:black'><a href="search_class.htm">Класс
-  операторов ассоциативного поиска search</a></span></p>
-  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
-  style='font-size:20.0pt'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
-  style='font-size:20.0pt'><a href="erase_class.htm">Класс операторов удаления erase</a></span></p>
-  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
-  style='font-size:20.0pt'>4.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
-  style='font-size:20.0pt;color:black'><a href="select_class.htm">Класс
-  операторов выборки select</a></span></p>
-  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
-  style='font-size:20.0pt'>5.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
-  style='font-size:20.0pt;color:black'><a href="print_class.htm">Класс
-  операторов вывода информации в протокол print</a></span></p>
-  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
-  style='font-size:20.0pt'>6.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
-  style='font-size:20.0pt;color:black'><a href="if_class.htm">Класс операторов
-  проверки условий if</a></span></p>
-  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
-  style='font-size:20.0pt'>7.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
-  style='font-size:20.0pt;color:black'><a href="math_class.htm">Класс
-  операторов математических действий</a></span></p>
-  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
-  style='font-size:20.0pt'>8.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
-  style='font-size:20.0pt;color:black'><a href="process_class.htm">Класс
-  операторов работы с процессами</a></span></p>
-  </td>
- </tr>
-</table>
-
-<p class=MsoNormal><span style='font-size:14.0pt'>&nbsp;</span></p>
-
 <p class=MsoNormal><span style='font-size:14.0pt'>Операторы языка </span><span
 lang=EN-GB style='font-size:14.0pt'>SCP</span><span style='font-size:14.0pt'>
 (далее </span><span lang=EN-US style='font-size:14.0pt'>scp</span><span
@@ -104,8 +55,8 @@ style='font-size:14.0pt'>-операторы) имеют ряд схожих особенностей.</span></p>
 <p class=MsoNormal><span style='font-size:14.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-left:36.0pt;text-align:justify;text-indent:
--18.0pt'><span style='font-size:14.0pt'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-size:14.0pt'>Для некоторых операторов наличие
+-18.0pt'><span style='font-size:14.0pt'>1.</span><span style='font-size:7.0pt'>&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span style='font-size:14.0pt'>Для некоторых операторов наличие
 атрибутов </span><i><span lang=EN-US style='font-size:14.0pt'>fixed</span></i><i><span
 style='font-size:14.0pt'>_</span></i><span style='font-size:14.0pt'>, </span><i><span
 lang=EN-US style='font-size:14.0pt'>assign</span></i><i><span style='font-size:
