--- a/data/5/scp_guide/erase_class.htm
+++ b/data/5/scp_guide/erase_class.htm
@@ -23,14 +23,14 @@ a:visited, span.MsoHyperlinkFollowed
 	{color:purple;
 	text-decoration:underline;}
 p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
-	{mso-style-link:"Текст выноски Знак";
+	{mso-style-link:"Balloon Text Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:8.0pt;
 	font-family:"Tahoma","sans-serif";}
-span.a
-	{mso-style-name:"Текст выноски Знак";
-	mso-style-link:"Текст выноски";
+span.BalloonTextChar
+	{mso-style-name:"Balloon Text Char";
+	mso-style-link:"Balloon Text";
 	font-family:"Tahoma","sans-serif";}
 p.msochpdefault, li.msochpdefault, div.msochpdefault
 	{mso-style-name:msochpdefault;
@@ -38,6 +38,17 @@ p.msochpdefault, li.msochpdefault, div.msochpdefault
 	margin-left:0cm;
 	font-size:10.0pt;
 	font-family:"Times New Roman","serif";}
+p.a, li.a, div.a
+	{mso-style-name:"Текст выноски";
+	mso-style-link:"Текст выноски Знак";
+	margin:0cm;
+	margin-bottom:.0001pt;
+	font-size:12.0pt;
+	font-family:"Times New Roman","serif";}
+span.a0
+	{mso-style-name:"Текст выноски Знак";
+	mso-style-link:"Текст выноски";
+	font-family:"Tahoma","sans-serif";}
 .MsoChpDefault
 	{font-size:10.0pt;}
 @page WordSection1
@@ -45,6 +56,11 @@ p.msochpdefault, li.msochpdefault, div.msochpdefault
 	margin:2.0cm 42.5pt 2.0cm 3.0cm;}
 div.WordSection1
 	{page:WordSection1;}
+ /* List Definitions */
+ ol
+	{margin-bottom:0cm;}
+ul
+	{margin-bottom:0cm;}
 -->
 </style>
 
@@ -59,6 +75,37 @@ style='font-size:16.0pt'>Класс операторов удаления erase</span></b></p>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span lang=EN-US
 style='font-size:16.0pt'>&nbsp;</span></b></p>
+
+<table class=a1 border=1 cellspacing=0 cellpadding=0 width="100%"
+ style='width:100.0%;border-collapse:collapse;border:none'>
+ <tr>
+  <td width="100%" valign=top style='width:100.0%;border:solid windowtext 1.0pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal align=center style='text-align:center'><span
+  style='font-size:14.0pt;color:black'>Содержание главы</span></p>
+  </td>
+ </tr>
+ <tr>
+  <td width="100%" style='width:100.0%;border:solid windowtext 1.0pt;
+  border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
+  style='font-size:14.0pt;color:black'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+  </span></span><span style='font-size:14.0pt'><a href="#eraseEl">Оператор
+  удаления элемента <span lang=EN-US>eraseEl</span></a></span></p>
+  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
+  style='font-size:14.0pt;color:black'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+  </span></span><span style='font-size:14.0pt'><a href="#eraseElStr3">Оператор
+  удаления трёхэлементной конструкции <span lang=EN-US>eraseElStr</span>3</a></span></p>
+  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
+  style='font-size:14.0pt;color:black'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+  </span></span><span style='font-size:14.0pt'><a href="#eraseElStr5">Оператор
+  удаления пятиэлементной конструкции <span lang=EN-US>eraseElStr</span>5</a></span></p>
+  </td>
+ </tr>
+</table>
+
+<p class=MsoNormal style='text-align:justify;text-indent:35.4pt'><span
+style='font-size:14.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal style='text-align:justify;text-indent:35.4pt'><span
 style='font-size:14.0pt'>Класс операторов удаления предназначен для удаления
@@ -77,8 +124,9 @@ style='font-size:14.0pt'>&nbsp;</span></p>
   <td width="22%" style='width:22.1%;border:solid windowtext 1.0pt;padding:
   0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:14.0pt;color:black'><img width=64 height=40
-  src="erase_class.files/image001.gif" alt="Описание: Описание: Attention"></span></p>
+  style='font-size:14.0pt;color:black'><img border=0 width=64 height=40
+  src="erase_class.files/image001.gif"
+  alt="Description: Описание: Описание: Attention"></span></p>
   </td>
   <td width="77%" valign=top style='width:77.9%;border:solid windowtext 1.0pt;
   border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
@@ -159,8 +207,8 @@ style='font-size:14.0pt'>goto</span></i><i><span style='font-size:14.0pt'>_</spa
 lang=EN-US style='font-size:14.0pt'>error</span></i></p>
 
 <p class=MsoNormal style='margin-left:72.0pt;text-align:justify'><u><span
-style='font-size:14.0pt'>метка</span></u><span style='font-size:14.0pt'>
-ошибочного выполнения, если в ходе удаления возникла ошибка</span></p>
+style='font-size:14.0pt'>метка</span></u><span style='font-size:14.0pt'> ошибочного
+выполнения, если в ходе удаления возникла ошибка</span></p>
 
 <p class=MsoNormal><span style='font-size:14.0pt'>&nbsp;</span></p>
 
@@ -185,8 +233,9 @@ style='font-size:14.0pt;color:black'>&nbsp;</span></p>
   <td width="16%" valign=top style='width:16.7%;border:solid windowtext 1.0pt;
   padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:14.0pt;color:black'><img width=60 height=38
-  src="erase_class.files/image003.gif" alt="Описание: Описание: Example"></span></p>
+  style='font-size:14.0pt;color:black'><img border=0 width=60 height=38
+  src="erase_class.files/image003.gif"
+  alt="Description: Описание: Описание: Example"></span></p>
   </td>
   <td width="83%" valign=top style='width:83.3%;border:solid windowtext 1.0pt;
   border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
@@ -213,8 +262,9 @@ style='font-size:14.0pt;color:black'>&nbsp;</span></p>
   <td width="16%" valign=top style='width:16.7%;border:solid windowtext 1.0pt;
   border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:14.0pt;color:black'><img width=60 height=38
-  src="erase_class.files/image003.gif" alt="Описание: Описание: Example"></span></p>
+  style='font-size:14.0pt;color:black'><img border=0 width=60 height=38
+  src="erase_class.files/image003.gif"
+  alt="Description: Описание: Описание: Example"></span></p>
   </td>
   <td width="83%" valign=top style='width:83.3%;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -302,8 +352,8 @@ style='font-size:15.0pt'>arc</span></i><span lang=EN-US style='font-size:15.0pt'
 
 <p class=MsoNormal style='margin-left:70.8pt;text-align:justify'><span
 style='font-size:14.0pt'>[</span><span lang=EN-US style='font-size:14.0pt'>in</span><span
-style='font-size:14.0pt'>] </span><span lang=BE style='font-size:14.0pt'>дуга, которая
-является вторым элементом в трёхэлементной конструкции</span></p>
+style='font-size:14.0pt'>] </span><span lang=BE style='font-size:14.0pt'>дуга,
+которая является вторым элементом в трёхэлементной конструкции</span></p>
 
 <p class=MsoNormal style='text-indent:35.4pt'><i><span lang=EN-US
 style='font-size:15.0pt'>element</span></i><span lang=EN-US style='font-size:
@@ -358,8 +408,9 @@ style='font-size:14.0pt'>. Значения удаляемых операндов должно быть известны
   <td width="16%" valign=top style='width:16.7%;border:solid windowtext 1.0pt;
   padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:14.0pt;color:black'><img width=60 height=38
-  src="erase_class.files/image004.gif" alt="Описание: Описание: Example"></span></p>
+  style='font-size:14.0pt;color:black'><img border=0 width=60 height=38
+  src="erase_class.files/image004.gif"
+  alt="Description: Описание: Описание: Example"></span></p>
   </td>
   <td width="83%" valign=top style='width:83.3%;border:solid windowtext 1.0pt;
   border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
@@ -540,8 +591,9 @@ style='font-size:14.0pt'>. Значения удаляемых операндов должно быть известны
   <td width="16%" valign=top style='width:16.7%;border:solid windowtext 1.0pt;
   padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:14.0pt;color:black'><img width=60 height=38
-  src="erase_class.files/image004.gif" alt="Описание: Описание: Example"></span></p>
+  style='font-size:14.0pt;color:black'><img border=0 width=60 height=38
+  src="erase_class.files/image004.gif"
+  alt="Description: Описание: Описание: Example"></span></p>
   </td>
   <td width="83%" valign=top style='width:83.3%;border:solid windowtext 1.0pt;
   border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
