--- a/data/5/scp_guide/select_class.htm
+++ b/data/5/scp_guide/select_class.htm
@@ -23,14 +23,14 @@ a:visited, span.MsoHyperlinkFollowed
 	{color:purple;
 	text-decoration:underline;}
 p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
-	{mso-style-link:"Текст выноски Знак";
+	{mso-style-link:"Balloon Text Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:8.0pt;
 	font-family:"Tahoma","sans-serif";}
-span.a
-	{mso-style-name:"Текст выноски Знак";
-	mso-style-link:"Текст выноски";
+span.BalloonTextChar
+	{mso-style-name:"Balloon Text Char";
+	mso-style-link:"Balloon Text";
 	font-family:"Tahoma","sans-serif";}
 p.msochpdefault, li.msochpdefault, div.msochpdefault
 	{mso-style-name:msochpdefault;
@@ -38,6 +38,17 @@ p.msochpdefault, li.msochpdefault, div.msochpdefault
 	margin-left:0cm;
 	font-size:10.0pt;
 	font-family:"Times New Roman","serif";}
+p.a, li.a, div.a
+	{mso-style-name:"Текст выноски";
+	mso-style-link:"Текст выноски Знак";
+	margin:0cm;
+	margin-bottom:.0001pt;
+	font-size:12.0pt;
+	font-family:"Times New Roman","serif";}
+span.a0
+	{mso-style-name:"Текст выноски Знак";
+	mso-style-link:"Текст выноски";
+	font-family:"Tahoma","sans-serif";}
 .MsoChpDefault
 	{font-size:10.0pt;}
 @page WordSection1
@@ -45,6 +56,11 @@ p.msochpdefault, li.msochpdefault, div.msochpdefault
 	margin:2.0cm 42.5pt 2.0cm 3.0cm;}
 div.WordSection1
 	{page:WordSection1;}
+ /* List Definitions */
+ ol
+	{margin-bottom:0cm;}
+ul
+	{margin-bottom:0cm;}
 -->
 </style>
 
@@ -60,6 +76,41 @@ lang=EN-US style='font-size:16.0pt'>select</span></b></p>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span lang=EN-US
 style='font-size:16.0pt'>&nbsp;</span></b></p>
+
+<table class=a1 border=1 cellspacing=0 cellpadding=0 width="100%"
+ style='width:100.0%;border-collapse:collapse;border:none'>
+ <tr>
+  <td width="100%" valign=top style='width:100.0%;border:solid windowtext 1.0pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal align=center style='text-align:center'><span
+  style='font-size:14.0pt;color:black'>Содержание главы</span></p>
+  </td>
+ </tr>
+ <tr>
+  <td width="100%" style='width:100.0%;border:solid windowtext 1.0pt;
+  border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
+  style='font-size:14.0pt;color:black'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+  </span></span><span style='font-size:14.0pt'><a href="#selectYStr3">Оператор
+  выборки <span lang=EN-US>selectYStr3</span></a></span></p>
+  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
+  style='font-size:14.0pt;color:black'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+  </span></span><span style='font-size:14.0pt'><a href="#selectNStr3">Оператор
+  выборки <span lang=EN-US>selectNStr</span>3</a></span></p>
+  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
+  style='font-size:14.0pt;color:black'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+  </span></span><span style='font-size:14.0pt'><a href="#selectYStr5">Оператор
+  выборки <span lang=EN-US>selectYStr5</span></a></span></p>
+  <p class=MsoNormal style='margin-left:36.0pt;text-indent:-18.0pt'><span
+  style='font-size:14.0pt;color:black'>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+  </span></span><span style='font-size:14.0pt'><a href="#selectNStr5">Оператор
+  выборки <span lang=EN-US>selectNStr5</span></a></span></p>
+  </td>
+ </tr>
+</table>
+
+<p class=MsoNormal style='text-align:justify;text-indent:35.4pt'><span
+lang=EN-US style='font-size:14.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal style='text-align:justify;text-indent:35.4pt'><span
 style='font-size:14.0pt'>Операторы данного класса позволяют обрабатывать два
@@ -237,9 +288,9 @@ style='font-size:15.0pt'>&nbsp;</span></p>
   <td width="16%" valign=top style='width:16.7%;border:solid windowtext 1.0pt;
   padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:14.0pt;color:black'><img width=60 height=38
+  style='font-size:14.0pt;color:black'><img border=0 width=60 height=38
   src="select_class.files/image001.gif"
-  alt="Описание: Описание: Описание: Example"></span></p>
+  alt="Description: Описание: Описание: Описание: Example"></span></p>
   </td>
   <td width="83%" valign=top style='width:83.3%;border:solid windowtext 1.0pt;
   border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
@@ -265,9 +316,9 @@ style='font-size:15.0pt'>&nbsp;</span></p>
   style='font-size:14.0pt'>, </span><i><span lang=EN-US style='font-size:14.0pt'>elem</span></i><i><span
   style='font-size:14.0pt'>4.</span></i></p>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:14.0pt'><img width=256 height=185
+  style='font-size:14.0pt'><img border=0 width=256 height=185
   src="select_class.files/image002.gif"
-  alt="Описание: Описание: Описание: select_Ex1_1"></span></p>
+  alt="Description: Описание: Описание: Описание: select_Ex1_1"></span></p>
   <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
   style='font-size:14.0pt'>&nbsp;</span></p>
   <p class=MsoNormal style='text-align:justify'><span lang=EN-GB
@@ -310,9 +361,9 @@ style='font-size:15.0pt'>&nbsp;</span></p>
   <p class=MsoNormal style='text-align:justify'><span lang=EN-US
   style='font-size:14.0pt'>&nbsp;</span></p>
   <p class=MsoNormal align=center style='text-align:center'><i><span
-  style='font-size:14.0pt'><img width=76 height=187
+  style='font-size:14.0pt'><img border=0 width=76 height=187
   src="select_class.files/image003.gif"
-  alt="Описание: Описание: Описание: select_Ex1_2"></span></i></p>
+  alt="Description: Описание: Описание: Описание: select_Ex1_2"></span></i></p>
   </td>
  </tr>
 </table>
@@ -415,8 +466,8 @@ style='font-size:15.0pt'>2</span></i></p>
 
 <p class=MsoNormal style='margin-left:72.0pt;text-align:justify'><span
 style='font-size:14.0pt'>[</span><span lang=EN-US style='font-size:14.0pt'>out</span><span
-style='font-size:14.0pt'>] </span><span style='font-size:15.0pt'>множество, в
-котором остаются вторые элементы конструкций, не удовлетворяющие шаблону поиска</span></p>
+style='font-size:14.0pt'>] </span><span style='font-size:15.0pt'>множество, в котором
+остаются вторые элементы конструкций, не удовлетворяющие шаблону поиска</span></p>
 
 <p class=MsoNormal style='margin-left:36.0pt;text-align:justify'><i><span
 lang=EN-US style='font-size:15.0pt'>resultSet</span></i><i><span
@@ -478,9 +529,9 @@ style='font-size:15.0pt'>&nbsp;</span></p>
   <td width="16%" valign=top style='width:16.7%;border:solid windowtext 1.0pt;
   padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:14.0pt;color:black'><img width=60 height=38
+  style='font-size:14.0pt;color:black'><img border=0 width=60 height=38
   src="select_class.files/image001.gif"
-  alt="Описание: Описание: Описание: Example"></span></p>
+  alt="Description: Описание: Описание: Описание: Example"></span></p>
   </td>
   <td width="83%" valign=top style='width:83.3%;border:solid windowtext 1.0pt;
   border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
@@ -642,8 +693,8 @@ style='font-size:15.0pt'> </span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;text-align:justify'><span
 style='font-size:14.0pt'>[</span><span lang=EN-US style='font-size:14.0pt'>in</span><span
-style='font-size:14.0pt'>] </span><span lang=BE style='font-size:14.0pt'>дуга, которая
-является четвёртым элементом в </span><span style='font-size:15.0pt'>пятиэлементной</span><span
+style='font-size:14.0pt'>] </span><span lang=BE style='font-size:14.0pt'>дуга,
+которая является четвёртым элементом в </span><span style='font-size:15.0pt'>пятиэлементной</span><span
 lang=BE style='font-size:14.0pt'> конструкции</span></p>
 
 <p class=MsoNormal style='text-indent:35.4pt'><i><span lang=EN-US
@@ -708,8 +759,8 @@ style='font-size:15.0pt'>goto</span></i><i><span style='font-size:15.0pt'>_</spa
 lang=EN-US style='font-size:15.0pt'>yes</span></i></p>
 
 <p class=MsoNormal style='margin-left:72.0pt'><u><span style='font-size:15.0pt'>метка</span></u><span
-style='font-size:15.0pt'> успешного выполнения, если найдены конструкции, не удовлетворяющие
-шаблону поиска </span></p>
+style='font-size:15.0pt'> успешного выполнения, если найдены конструкции, не
+удовлетворяющие шаблону поиска </span></p>
 
 <p class=MsoNormal style='margin-left:36.0pt'><i><span lang=EN-US
 style='font-size:15.0pt'>goto</span></i><i><span style='font-size:15.0pt'>_</span></i><i><span
@@ -891,9 +942,8 @@ style='font-size:15.0pt'>4</span></i></p>
 
 <p class=MsoNormal style='margin-left:72.0pt;text-align:justify'><span
 style='font-size:14.0pt'>[</span><span lang=EN-US style='font-size:14.0pt'>out</span><span
-style='font-size:14.0pt'>] </span><span style='font-size:15.0pt'>множество, в
-котором остаются четвертые элементы конструкций, не удовлетворяющие шаблону
-поиска</span></p>
+style='font-size:14.0pt'>] </span><span style='font-size:15.0pt'>множество, в котором
+остаются четвертые элементы конструкций, не удовлетворяющие шаблону поиска</span></p>
 
 <p class=MsoNormal style='margin-left:36.0pt;text-align:justify'><i><span
 lang=EN-US style='font-size:15.0pt'>resultSet</span></i><i><span
